--- a/thesis/ack.tex
+++ b/thesis/ack.tex
@@ -1,5 +1,18 @@
+%!tex root=./thesis.tex
 \chapter*{Acknowledgments}
 \addcontentsline{toc}{chapter}{Acknowledgments}
-Who do you want to thank?
 
-Remember to thank the ASA for funding!
+Lots of people to thank! But I may have to trim this list (sorry)!
+
+\begin{itemize}
+    \item my collaborators and people who have commented on my work: stas, larry, heinz, ray, avery, hongming, tim, jack, jakub, angus, henry, alec, anna
+    \item my office-mates, colleagues, and lunch buddies: adam, elly, lara, reggie, alex, tim 2, jens, lydia, cody, steve, adele, adam 2, phil, jack, karlie, angus, alec, henry, gosh there's a lot of people
+    \item howard and michelle
+    \item the fam
+    \item mitchell, nic, sarah, jakub, and other pillars of support
+    \item funders: the asa, the vice-chancellor fund
+    \item collaborations: rgz, of course
+    \item supervisors: cheng, naomi, ivy, julie, chris
+    \item notable people from my research groups: nick, nick 2, karlie, alec, jack, mengyan, dawei, james, lyla
+    \item people who proofread this thesis: probably rachel, sarah, jack, adam, elly, jakub
+\end{itemize}
