--- a/thesis/atlas.bib
+++ b/thesis/atlas.bib
@@ -545,3 +545,686 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2013A%26A...558A..33A},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Grant2010,
+   author = {{Grant}, J.~K. and {Taylor}, A.~R. and {Stil}, J.~M. and {Landecker}, T.~L. and
+  {Kothes}, R. and {Ransom}, R.~R. and {Scott}, D.},
+    title = "{The DRAO Planck Deep Fields: The Polarization Properties of Radio Galaxies at 1.4 GHz}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1003.4460},
+ keywords = {galaxies: evolution, galaxies: individual: ELAIS N1, galaxies: magnetic fields, polarization, radio continuum: galaxies, techniques: polarimetric},
+     year = 2010,
+    month = may,
+   volume = 714,
+    pages = {1689-1701},
+      doi = {10.1088/0004-637X/714/2/1689},
+   adsurl = {http://adsabs.harvard.edu/abs/2010ApJ...714.1689G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{Taylor2007,
+   author = {{Taylor}, A.~R. and {Stil}, J.~M. and {Grant}, J.~K. and {Landecker}, T.~L. and
+  {Kothes}, R. and {Reid}, R.~I. and {Gray}, A.~D. and {Scott}, D. and
+  {Martin}, P.~G. and {Boothroyd}, A.~I. and {Joncas}, G. and
+  {Lockman}, F.~J. and {English}, J. and {Sajina}, A. and {Bond}, J.~R.
+  },
+    title = "{Radio Polarimetry of the ELAIS N1 Field: Polarized Compact Sources}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {0705.2736},
+ keywords = {Galaxies: Evolution, galaxies: individual (ELAIS N1), Polarization, Radio Continuum: Galaxies, Techniques: Polarimetric},
+     year = 2007,
+    month = sep,
+   volume = 666,
+    pages = {201-211},
+      doi = {10.1086/519786},
+   adsurl = {http://adsabs.harvard.edu/abs/2007ApJ...666..201T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{Gendre2008,
+   author = {{Gendre}, M.~A. and {Wall}, J.~V.},
+    title = "{The Combined NVSS-FIRST Galaxies (CoNFIG) sample - I. Sample definition, classification and evolution}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {0808.0165},
+ keywords = {surveys , galaxies: active , galaxies: luminosity function, mass function , galaxies: statistics , radio continuum: galaxies},
+     year = 2008,
+    month = oct,
+   volume = 390,
+    pages = {819-828},
+      doi = {10.1111/j.1365-2966.2008.13792.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2008MNRAS.390..819G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{Fanaroff1974,
+   author = {{Fanaroff}, B.~L. and {Riley}, J.~M.},
+    title = "{The morphology of extragalactic radio sources of high and low luminosity}",
+  journal = {\mnras},
+     year = 1974,
+    month = may,
+   volume = 167,
+    pages = {31P-36P},
+      doi = {10.1093/mnras/167.1.31P},
+   adsurl = {http://adsabs.harvard.edu/abs/1974MNRAS.167P..31F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{johnston07,
+   author = {{Johnston}, S. and {Bailes}, M. and {Bartel}, N. and {Baugh}, C. and
+    {Bietenholz}, M. and {Blake}, C. and {Braun}, R. and {Brown}, J. and
+    {Chatterjee}, S. and {Darling}, J. and {Deller}, A. and {Dodson}, R. and
+    {Edwards}, P.~G. and {Ekers}, R. and {Ellingsen}, S. and {Feain}, I. and
+    {Gaensler}, B.~M. and {Haverkorn}, M. and {Hobbs}, G. and {Hopkins}, A. and
+    {Jackson}, C. and {James}, C. and {Joncas}, G. and {Kaspi}, V. and
+    {Kilborn}, V. and {Koribalski}, B. and {Kothes}, R. and {Landecker}, T.~L. and
+    {Lenc}, E. and {Lovell}, J. and {Macquart}, J.-P. and {Manchester}, R. and
+    {Matthews}, D. and {McClure-Griffiths}, N.~M. and {Norris}, R. and
+    {Pen}, U.-L. and {Phillips}, C. and {Power}, C. and {Protheroe}, R. and
+    {Sadler}, E. and {Schmidt}, B. and {Stairs}, I. and {Staveley-Smith}, L. and
+    {Stil}, J. and {Taylor}, R. and {Tingay}, S. and {Tzioumis}, A. and
+    {Walker}, M. and {Wall}, J. and {Wolleben}, M.},
+    title = "{Science with the Australian Square Kilometre Array Pathfinder}",
+  journal = {\pasa},
+archivePrefix = "arXiv",
+   eprint = {0711.2103},
+ keywords = {telescopes},
+     year = 2007,
+    month = dec,
+   volume = 24,
+    pages = {174-188},
+      doi = {10.1071/AS07033},
+   adsurl = {http://adsabs.harvard.edu/abs/2007PASA...24..174J},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{verheijen08,
+   author = {{Verheijen}, M.~A.~W. and {Oosterloo}, T.~A. and {van Cappellen}, W.~A. and
+    {Bakker}, L. and {Ivashina}, M.~V. and {van der Hulst}, J.~M.
+    },
+    title = "{Apertif, a focal plane array for the WSRT}",
+ keywords = {Radio telescopes and instrumentation, heterodyne receivers, Astronomical observations, Origin formation evolution age and star formation, Distances redshifts radial velocities, spatial distribution of galaxies, Astronomical catalogs atlases sky surveys databases retrieval systems archives etc.},
+booktitle = {AIP Conf. Ser. 1035, The Evolution of Galaxies Through the Neutral Hydrogen Window},
+     year = 2008,
+   volume = 1035,
+    pages = {265-271},
+   adsurl = {http://adsabs.harvard.edu/abs/2008AIPC.1035..265V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data Syst
+  em}
+}
+
+@ARTICLE{norris11,
+   author = {{Norris}, R.~P. and {Hopkins}, A.~M. and {Afonso}, J. and {Brown}, S. and
+    {Condon}, J.~J. and {Dunne}, L. and {Feain}, I. and {Hollow}, R. and
+    {Jarvis}, M. and {Johnston-Hollitt}, M. and {Lenc}, E. and {Middelberg}, E. and
+    {Padovani}, P. and {Prandoni}, I. and {Rudnick}, L. and {Seymour}, N. and
+    {Umana}, G. and {Andernach}, H. and {Alexander}, D.~M. and {Appleton}, P.~N. and
+    {Bacon}, D. and {Banfield}, J. and {Becker}, W. and {Brown}, M.~J.~I. and
+    {Ciliegi}, P. and {Jackson}, C. and {Eales}, S. and {Edge}, A.~C. and
+    {Gaensler}, B.~M. and {Giovannini}, G. and {Hales}, C.~A. and
+    {Hancock}, P. and {Huynh}, M.~T. and {Ibar}, E. and {Ivison}, R.~J. and
+    {Kennicutt}, R. and {Kimball}, A.~E. and {Koekemoer}, A.~M. and
+    {Koribalski}, B.~S. and {L{\'o}pez-S{\'a}nchez}, {\'A}.~R. and
+    {Mao}, M.~Y. and {Murphy}, T. and {Messias}, H. and {Pimbblet}, K.~A. and
+    {Raccanelli}, A. and {Randall}, K.~E. and {Reiprich}, T.~H. and
+    {Roseboom}, I.~G. and {R{\"o}ttgering}, H. and {Saikia}, D.~J. and
+    {Sharp}, R.~G. and {Slee}, O.~B. and {Smail}, I. and {Thompson}, M.~A. and
+    {Urquhart}, J.~S. and {Wall}, J.~V. and {Zhao}, G.-B.},
+    title = "{EMU: Evolutionary Map of the Universe}",
+  journal = {\pasa},
+archivePrefix = "arXiv",
+   eprint = {1106.3219},
+ keywords = {telescopes, surveys, stars: activity,  galaxies: evolution, galaxies: formation,  cosmology: observations, radio continuum: general},
+     year = 2011,
+    month = aug,
+   volume = 28,
+    pages = {215-248},
+      doi = {10.1071/AS11021},
+   adsurl = {http://adsabs.harvard.edu/abs/2011PASA...28..215N},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{banfield15,
+   author = {{Banfield}, J.~K. and {Wong}, O.~I. and {Willett}, K.~W. and
+    {Norris}, R.~P. and {Rudnick}, L. and {Shabala}, S.~S. and {Simmons}, B.~D. and
+    {Snyder}, C. and {Garon}, A. and {Seymour}, N. and {Middelberg}, E. and
+    {Andernach}, H. and {Lintott}, C.~J. and {Jacob}, K. and {Kapi{\'n}ska}, A.~D. and
+    {Mao}, M.~Y. and {Masters}, K.~L. and {Jarvis}, M.~J. and {Schawinski}, K. and
+    {Paget}, E. and {Simpson}, R. and {Kl{\"o}ckner}, H.-R. and
+    {Bamford}, S. and {Burchell}, T. and {Chow}, K.~E. and {Cotter}, G. and
+    {Fortson}, L. and {Heywood}, I. and {Jones}, T.~W. and {Kaviraj}, S. and
+    {L{\'o}pez-S{\'a}nchez}, {\'A}.~R. and {Maksym}, W.~P. and {Polsterer}, K. and
+    {Borden}, K. and {Hollow}, R.~P. and {Whyte}, L.},
+    title = "{Radio Galaxy Zoo: host galaxies and radio morphologies derived from visual inspection}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1507.07272},
+ keywords = {methods: data analysis, infrared: galaxies, radio continuum: galaxies},
+     year = 2015,
+    month = nov,
+   volume = 453,
+    pages = {2326-2340},
+      doi = {10.1093/mnras/stv1688},
+   adsurl = {http://adsabs.harvard.edu/abs/2015MNRAS.453.2326B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{rottgering11,
+   author = {{R{\"o}ttgering}, H. and {Afonso}, J. and {Barthel}, P. and
+    {Batejat}, F. and {Best}, P. and {Bonafede}, A. and {Br{\"u}ggen}, M. and
+    {Brunetti}, G. and {Chy{\.z}y}, K. and {Conway}, J. and {Gasperin}, F.~D. and
+    {Ferrari}, C. and {Haverkorn}, M. and {Heald}, G. and {Hoeft}, M. and
+    {Jackson}, N. and {Jarvis}, M. and {Ker}, L. and {Lehnert}, M. and
+    {Macario}, G. and {McKean}, J. and {Miley}, G. and {Morganti}, R. and
+    {Oosterloo}, T. and {Orr{\`u}}, E. and {Pizzo}, R. and {Rafferty}, D. and
+    {Shulevski}, A. and {Tasse}, C. and {Bemmel}, I.~V. and {van der Tol}, B. and
+    {van Weeren}, R. and {Verheijen}, M. and {White}, G. and {Wise}, M.
+    },
+    title = "{LOFAR and APERTIF Surveys of the Radio Sky: Probing Shocks and Magnetic Fields in Galaxy Clusters}",
+  journal = {Journal of Astrophysics and Astronomy},
+archivePrefix = "arXiv",
+   eprint = {1107.1606},
+ keywords = {Galaxies, clusters, general, intracluster medium, radio continuum: galaxies, radio telescopes},
+     year = 2011,
+    month = dec,
+   volume = 32,
+    pages = {557-566},
+      doi = {10.1007/s12036-011-9129-x},
+   adsurl = {http://adsabs.harvard.edu/abs/2011JApA...32..557R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{norris06,
+   author = {{Norris}, R.~P. and {Afonso}, J. and {Appleton}, P.~N. and {Boyle}, B.~J. and
+  {Ciliegi}, P. and {Croom}, S.~M. and {Huynh}, M.~T. and {Jackson}, C.~A. and
+  {Koekemoer}, A.~M. and {Lonsdale}, C.~J. and {Middelberg}, E. and
+  {Mobasher}, B. and {Oliver}, S.~J. and {Polletta}, M. and {Siana}, B.~D. and
+  {Smail}, I. and {Voronkov}, M.~A.},
+    title = "{Deep ATLAS Radio Observations of the Chandra Deep Field-South/Spitzer Wide-Area Infrared Extragalactic Field}",
+  journal = {\aj},
+   eprint = {astro-ph/0610538},
+ keywords = {Catalogs, Galaxies: Active, Galaxies: Evolution, Radio Continuum: Galaxies, Surveys},
+     year = 2006,
+    month = dec,
+   volume = 132,
+    pages = {2409-2423},
+      doi = {10.1086/508275},
+   adsurl = {http://adsabs.harvard.edu/abs/2006AJ....132.2409N},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{middelberg08,
+   author = {{Middelberg}, E. and {Norris}, R.~P. and {Cornwell}, T.~J. and
+  {Voronkov}, M.~A. and {Siana}, B.~D. and {Boyle}, B.~J. and
+  {Ciliegi}, P. and {Jackson}, C.~A. and {Huynh}, M.~T. and {Berta}, S. and
+  {Rubele}, S. and {Lonsdale}, C.~J. and {Ivison}, R.~J. and {Smail}, I.
+  },
+    title = "{Deep Australia Telescope Large Area Survey Radio Observations of the European Large Area ISO Survey S1/Spitzer Wide-Area Infrared Extragalactic Field}",
+  journal = {\aj},
+ keywords = {catalogs, galaxies: active, galaxies: evolution, radio continuum: galaxies, surveys},
+     year = 2008,
+    month = apr,
+   volume = 135,
+    pages = {1276-1290},
+      doi = {10.1088/0004-6256/135/4/1276},
+   adsurl = {http://adsabs.harvard.edu/abs/2008AJ....135.1276M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{franzen15,
+   author = {{Franzen}, T.~M.~O. and {Banfield}, J.~K. and {Hales}, C.~A. and
+  {Hopkins}, A. and {Norris}, R.~P. and {Seymour}, N. and {Chow}, K.~E. and
+  {Herzog}, A. and {Huynh}, M.~T. and {Lenc}, E. and {Mao}, M.~Y. and
+  {Middelberg}, E.},
+    title = "{ATLAS - I. Third release of 1.4 GHz mosaics and component catalogues}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1508.03150},
+ keywords = {methods: data analysis, catalogues, surveys, radio continuum: galaxies},
+     year = 2015,
+    month = nov,
+   volume = 453,
+    pages = {4020-4036},
+      doi = {10.1093/mnras/stv1866},
+   adsurl = {http://adsabs.harvard.edu/abs/2015MNRAS.453.4020F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@unpublished{wong17,
+  author={Wong, O. I. and Willett, K. W. and Rudnick, L. and Garon, A. and Banfield, J. K. and Shabala, S. S. and Norris, R. P. and Simmons, B. D. and Seymour, N. and Kapi\'nska, A. D. and Middelberg, E. and others},
+  title={{Radio Galaxy Zoo Data Release 1}: morphological classifications of 100,000 {FIRST} radio sources},
+  year={in prep. }
+}
+
+@article{lecun98,
+  title={Gradient-based learning applied to document recognition},
+  author={LeCun, Yann and Bottou, L{\'e}on and Bengio, Yoshua and Haffner, Patrick},
+  journal={Proceedings of the IEEE},
+  volume={86},
+  number={11},
+  pages={2278--2324},
+  year={1998},
+  publisher={IEEE}
+}
+
+@ARTICLE{lintott08,
+   author = {{Lintott}, C.~J. and {Schawinski}, K. and {Slosar}, A. and {Land}, K. and
+  {Bamford}, S. and {Thomas}, D. and {Raddick}, M.~J. and {Nichol}, R.~C. and
+  {Szalay}, A. and {Andreescu}, D. and {Murray}, P. and {Vandenberg}, J.
+  },
+    title = "{Galaxy Zoo: morphologies derived from visual inspection of galaxies from the Sloan Digital Sky Survey}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {0804.4483},
+ keywords = {methods: data analysis , galaxies: elliptical and lenticular, cD , galaxies: general , galaxies: spiral},
+     year = 2008,
+    month = sep,
+   volume = 389,
+    pages = {1179-1189},
+      doi = {10.1111/j.1365-2966.2008.13689.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2008MNRAS.389.1179L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{fan15,
+  author = {Fan, Dongwei and Budav\'ari, Tamás and Norris, Ray P. and Hopkins, Andrew M.},
+  title = {Matching radio catalogues with realistic geometry: application to {SWIRE} and {ATLAS}},
+  volume = {451},
+  number = {2},
+  pages = {1299-1305},
+  year = {2015},
+  doi = {10.1093/mnras/stv994},
+  abstract ={Cross-matching catalogues at different wavelengths is a difficult problem in astronomy, especially when the objects are not point-like. At radio wavelengths, an object can have several components corresponding, for example, to a core and lobes. Considering not all radio detections correspond to visible or infrared sources, matching these catalogues can be challenging. Traditionally, this is done by eye for better quality, which does not scale to the large data volumes expected from the next-generation of radio telescopes. We present a novel automated procedure, using Bayesian hypothesis testing, to achieve reliable associations by explicit modelling of a particular class of radio-source morphology. The new algorithm not only assesses the likelihood of an association between data at two different wavelengths, but also tries to assess whether different radio sources are physically associated, are double-lobed radio galaxies, or just distinct nearby objects. Application to the Spitzer Wide-Area Infrared Extragalactic and Australia Telescope Large Area Survey CDF-S catalogues shows that this method performs well without human intervention.},
+  URL = {http://mnras.oxfordjournals.org/content/451/2/1299.abstract},
+  eprint = {http://mnras.oxfordjournals.org/content/451/2/1299.full.pdf+html},
+  journal = {\mnras}
+}
+
+@ARTICLE{norris17unexpected,
+   author = {{Norris}, R.~P.},
+    title = "{Discovering the Unexpected in Astronomical Survey Data}",
+  journal = {\pasa},
+archivePrefix = "arXiv",
+   eprint = {1611.05570},
+ primaryClass = "astro-ph.IM",
+ keywords = {surveys, telescopes},
+     year = 2017,
+    month = jan,
+   volume = 34,
+      eid = {e007},
+    pages = {e007},
+      doi = {10.1017/pasa.2016.63},
+   adsurl = {http://adsabs.harvard.edu/abs/2017PASA...34....7N},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{polsterer15pink,
+   author = {{Polsterer}, K.~L. and {Gieseke}, F. and {Igel}, C.},
+    title = "{Automatic Galaxy Classification via Machine Learning Techniques: Parallelized Rotation/Flipping INvariant Kohonen Maps (PINK)}",
+booktitle = {Astronomical Data Analysis Software an Systems XXIV (ADASS XXIV)},
+     year = 2015,
+   series = {Astronomical Society of the Pacific Conference Series},
+   volume = 495,
+   editor = {{Taylor}, A.~R. and {Rosolowsky}, E.},
+    month = sep,
+    pages = {81},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ASPC..495...81P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{proctor06,
+   author = {{Proctor}, D.~D.},
+    title = "{Comparing Pattern Recognition Feature Sets for Sorting Triples in the FIRST Database}",
+  journal = {\apjs},
+   eprint = {astro-ph/0605104},
+ keywords = {Astronomical Data Bases: Miscellaneous, Galaxies: General, Methods: Data Analysis, Methods: Statistical, Surveys, Techniques: Image Processing},
+     year = 2006,
+    month = jul,
+   volume = 165,
+    pages = {95-107},
+      doi = {10.1086/504801},
+   adsurl = {http://adsabs.harvard.edu/abs/2006ApJS..165...95P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{lonsdale03swire,
+   author = {{Lonsdale}, C.~J. and {Smith}, H.~E. and {Rowan-Robinson}, M. and
+  {Surace}, J. and {Shupe}, D. and {Xu}, C. and {Oliver}, S. and
+  {Padgett}, D. and {Fang}, F. and {Conrow}, T. and {Franceschini}, A. and
+  {Gautier}, N. and {Griffin}, M. and {Hacking}, P. and {Masci}, F. and
+  {Morrison}, G. and {O'Linger}, J. and {Owen}, F. and {P{\'e}rez-Fournon}, I. and
+  {Pierre}, M. and {Puetter}, R. and {Stacey}, G. and {Castro}, S. and
+  {Polletta}, M.~d.~C. and {Farrah}, D. and {Jarrett}, T. and
+  {Frayer}, D. and {Siana}, B. and {Babbedge}, T. and {Dye}, S. and
+  {Fox}, M. and {Gonzalez-Solares}, E. and {Salaman}, M. and {Berta}, S. and
+  {Condon}, J.~J. and {Dole}, H. and {Serjeant}, S.},
+    title = "{SWIRE: The SIRTF Wide-Area Infrared Extragalactic Survey}",
+  journal = {\pasp},
+   eprint = {astro-ph/0305375},
+ keywords = {Surveys, Galaxies: Evolution, Galaxies: Active, Cosmology: Large-Scale Structure of Universe, infrared: galaxies},
+     year = 2003,
+    month = aug,
+   volume = 115,
+    pages = {897-927},
+      doi = {10.1086/376850},
+   adsurl = {http://adsabs.harvard.edu/abs/2003PASP..115..897L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{wright10wise,
+   author = {{Wright}, E.~L. and {Eisenhardt}, P.~R.~M. and {Mainzer}, A.~K. and
+  {Ressler}, M.~E. and {Cutri}, R.~M. and {Jarrett}, T. and {Kirkpatrick}, J.~D. and
+  {Padgett}, D. and {McMillan}, R.~S. and {Skrutskie}, M. and
+  {Stanford}, S.~A. and {Cohen}, M. and {Walker}, R.~G. and {Mather}, J.~C. and
+  {Leisawitz}, D. and {Gautier}, III, T.~N. and {McLean}, I. and
+  {Benford}, D. and {Lonsdale}, C.~J. and {Blain}, A. and {Mendez}, B. and
+  {Irace}, W.~R. and {Duval}, V. and {Liu}, F. and {Royer}, D. and
+  {Heinrichsen}, I. and {Howard}, J. and {Shannon}, M. and {Kendall}, M. and
+  {Walsh}, A.~L. and {Larsen}, M. and {Cardon}, J.~G. and {Schick}, S. and
+  {Schwalm}, M. and {Abid}, M. and {Fabinsky}, B. and {Naes}, L. and
+  {Tsai}, C.-W.},
+    title = "{The Wide-field Infrared Survey Explorer (WISE): Mission Description and Initial On-orbit Performance}",
+  journal = {\aj},
+archivePrefix = "arXiv",
+   eprint = {1008.0031},
+ primaryClass = "astro-ph.IM",
+ keywords = {infrared: general, space vehicles, surveys},
+     year = 2010,
+    month = dec,
+   volume = 140,
+      eid = {1868-1881},
+    pages = {1868-1881},
+      doi = {10.1088/0004-6256/140/6/1868},
+   adsurl = {http://adsabs.harvard.edu/abs/2010AJ....140.1868W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{white97first,
+   author = {{White}, R.~L. and {Becker}, R.~H. and {Helfand}, D.~J. and
+  {Gregg}, M.~D.},
+    title = "{A Catalog of 1.4 GHz Radio Sources from the FIRST Survey}",
+  journal = {\apj},
+ keywords = {Astrometry, Catalogs, Galaxies: Statistics, Galaxies: Quasars: General, Radio Continuum: Galaxies, Surveys},
+     year = 1997,
+    month = feb,
+   volume = 475,
+    pages = {479-493},
+      doi = {10.1086/303564},
+   adsurl = {http://adsabs.harvard.edu/abs/1997ApJ...475..479W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@article{surace05swire,
+  title={The {SWIRE} Data Release 2: Image Atlases and Source Catalogs for {ELAIS-N1}, {ELAIS-N2}, {XMM-LSS}, and the {Lockman} Hole},
+  author={Surace, JA and Shupe, DL and Fang, F and Lonsdale, CJ and Gonzalez-Solares, E and Hatziminaoglou11, E and Siana, B and Babbedge, T and Polletta, M and Rodighiero, G and others},
+  journal={Spitzer Science Centre, California Institute of Technology, Pasadena, CA},
+  year={2005}
+}
+
+@article{breiman01random-forest,
+  author={Leo Breiman},
+  title={Random Forests},
+  year=2001,
+  journal={Machine Learning},
+  volume=45,
+  number=1,
+  pages={5--32}
+}
+
+@ARTICLE{aniyan17cnn,
+   author = {{Aniyan}, A.~K. and {Thorat}, K.},
+    title = "{Classifying Radio Galaxies with the Convolutional Neural Network}",
+  journal = {\apjs},
+archivePrefix = "arXiv",
+   eprint = {1705.03413},
+ primaryClass = "astro-ph.IM",
+ keywords = {methods: miscellaneous, methods: observational, radio continuum: galaxies, techniques: miscellaneous },
+     year = 2017,
+    month = jun,
+   volume = 230,
+      eid = {20},
+    pages = {20},
+      doi = {10.3847/1538-4365/aa7333},
+   adsurl = {http://adsabs.harvard.edu/abs/2017ApJS..230...20A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@book{bishop06ml,
+  title={Pattern recognition and machine learning},
+  author={Bishop, C. M.},
+  year={2006},
+  publisher={Springer}
+}
+@ARTICLE{dieleman15cnn,
+   author = {{Dieleman}, S. and {Willett}, K.~W. and {Dambre}, J.},
+    title = "{Rotation-invariant convolutional neural networks for galaxy morphology prediction}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1503.07077},
+ primaryClass = "astro-ph.IM",
+ keywords = {methods: data analysis, techniques: image processing, catalogues, galaxies: general},
+     year = 2015,
+    month = jun,
+   volume = 450,
+    pages = {1441-1459},
+      doi = {10.1093/mnras/stv632},
+   adsurl = {http://adsabs.harvard.edu/abs/2015MNRAS.450.1441D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{richter75likelihood,
+   author = {{Richter}, G.~A.},
+    title = "{Search for optical identifications in the 5C3-radio survey. II - Statistical treatment and results}",
+  journal = {Astronomische Nachrichten},
+ keywords = {Photographic Plates, Quasars, Radio Sources (Astronomy), Schmidt Telescopes, Statistical Analysis, Andromeda Galaxy, Cosmology, H Ii Regions, Red Shift, Tables (Data)},
+     year = 1975,
+   volume = 296,
+    pages = {65-81},
+      doi = {10.1002/asna.19752960203},
+   adsurl = {http://adsabs.harvard.edu/abs/1975AN....296...65R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@unpublished{lukic17compact,
+  author={Lukic, V. and Banfield, J. K. and Wong, O. I. and Br\"uggen, M.},
+  title={{Radio Galaxy Zoo}: Compact and extended radio source classification with deep learning},
+  year={in prep. }
+}
+
+@misc{chollet15keras,
+  title={Keras},
+  author={Chollet, Fran\c{c}ois and others},
+  year={2015},
+  publisher={GitHub},
+  howpublished={\url{https://github.com/fchollet/keras}},
+}
+@inproceedings{rowley1996facedetection,
+  title={Human face detection in visual scenes},
+  author={Rowley, Henry A and Baluja, Shumeet and Kanade, Takeo},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={875},
+  year={1996}
+}
+
+@ARTICLE{sajina2005,
+   author = {{Sajina}, A. and {Lacy}, M. and {Scott}, D.},
+    title = "{Simulating the Spitzer Mid-Infrared Color-Color Diagrams}",
+  journal = {\apj},
+   eprint = {astro-ph/0409597},
+ keywords = {Infrared: Galaxies, Methods: Data Analysis},
+     year = 2005,
+    month = mar,
+   volume = 621,
+    pages = {256-268},
+      doi = {10.1086/426536},
+   adsurl = {http://adsabs.harvard.edu/abs/2005ApJ...621..256S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{astropy,
+   author = {{Astropy Collaboration} and {Robitaille}, T.~P. and {Tollerud}, E.~J. and 
+    {Greenfield}, P. and {Droettboom}, M. and {Bray}, E. and {Aldcroft}, T. and 
+    {Davis}, M. and {Ginsburg}, A. and {Price-Whelan}, A.~M. and 
+    {Kerzendorf}, W.~E. and {Conley}, A. and {Crighton}, N. and 
+    {Barbary}, K. and {Muna}, D. and {Ferguson}, H. and {Grollier}, F. and 
+    {Parikh}, M.~M. and {Nair}, P.~H. and {Unther}, H.~M. and {Deil}, C. and 
+    {Woillez}, J. and {Conseil}, S. and {Kramer}, R. and {Turner}, J.~E.~H. and 
+    {Singer}, L. and {Fox}, R. and {Weaver}, B.~A. and {Zabalza}, V. and 
+    {Edwards}, Z.~I. and {Azalee Bostroem}, K. and {Burke}, D.~J. and 
+    {Casey}, A.~R. and {Crawford}, S.~M. and {Dencheva}, N. and 
+    {Ely}, J. and {Jenness}, T. and {Labrie}, K. and {Lian Lim}, P. and 
+    {Pierfederici}, F. and {Pontzen}, A. and {Ptak}, A. and {Refsdal}, B. and 
+    {Servillat}, M. and {Streicher}, O.},
+    title = "{Astropy: A community Python package for astronomy}",
+  journal = {\aap},
+ keywords = {methods: data analysis, methods: miscellaneous, virtual observatory tools},
+     year = 2013,
+    month = oct,
+   volume = 558,
+      eid = {A33},
+    pages = {A33},
+      doi = {10.1051/0004-6361/201322068},
+   adsurl = {http://adsabs.harvard.edu/abs/2013A%26A...558A..33A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{pedregosa11sklearn,
+ author = {Pedregosa, Fabian and Varoquaux, Ga\"{e}l and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and Vanderplas, Jake and Passos, Alexandre and Cournapeau, David and Brucher, Matthieu and Perrot, Matthieu and Duchesnay, \'{E}douard},
+ title = {Scikit-learn: Machine Learning in Python},
+ journal = {J. Mach. Learn. Res.},
+ issue_date = {2/1/2011},
+ volume = {12},
+ month = nov,
+ year = {2011},
+ issn = {1532-4435},
+ pages = {2825--2830},
+ numpages = {6},
+ url = {http://dl.acm.org/citation.cfm?id=1953048.2078195},
+ acmid = {2078195},
+ publisher = {JMLR.org},
+} 
+
+@ARTICLE{norris17surveys,
+   author = {{Norris}, R.~P.},
+    title = "{Extragalactic radio continuum surveys and the transformation of radio astronomy}",
+  journal = {Nature Astronomy},
+archivePrefix = "arXiv",
+   eprint = {1709.05064},
+     year = 2017,
+    month = oct,
+   volume = 1,
+    pages = {671-678},
+      doi = {10.1038/s41550-017-0233-y},
+   adsurl = {http://adsabs.harvard.edu/abs/2017NatAs...1..671N},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{weston18lrpy,
+   author = {{Weston}, S.~D. and {Seymour}, N. and {Gulyaev}, S. and {Norris}, R.~P. and 
+  {Banfield}, J. and {Vaccari}, M. and {Hopkins}, A.~M. and {Franzen}, T.~M.~O.
+  },
+    title = "{Automated cross-identifying radio to infrared surveys using the LRPY algorithm: a case study}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1710.01449},
+ keywords = {methods: data analysis, catalogues, surveys, radio continuum: galaxies},
+     year = 2018,
+    month = feb,
+   volume = 473,
+    pages = {4523-4537},
+      doi = {10.1093/mnras/stx2562},
+   adsurl = {http://adsabs.harvard.edu/abs/2018MNRAS.473.4523W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{collier14irfaint,
+   author = {{Collier}, J.~D. and {Banfield}, J.~K. and {Norris}, R.~P. and 
+  {Schnitzeler}, D.~H.~F.~M. and {Kimball}, A.~E. and {Filipovi{\'c}}, M.~D. and 
+  {Jarrett}, T.~H. and {Lonsdale}, C.~J. and {Tothill}, N.~F.~H.
+  },
+    title = "{Infrared-faint radio sources: a new population of high-redshift radio galaxies}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1312.1002},
+ keywords = {galaxies: active, galaxies: distances and redshifts, galaxies: evolution, galaxies: high-redshift, infrared: galaxies, radio continuum: galaxies},
+     year = 2014,
+    month = mar,
+   volume = 439,
+    pages = {545-565},
+      doi = {10.1093/mnras/stt2485},
+   adsurl = {http://adsabs.harvard.edu/abs/2014MNRAS.439..545C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{cutri2013wiseexplanatory,
+  title={Explanatory Supplement to the AllWISE Data Release Products},
+  author={Cutri, RM and Wright, EL and Conrow, T and Fowler, JW and Eisenhardt, PRM and Grillmair, C and Kirkpatrick, JD and Masci, F and McCallon, HL and Wheelock, SL and others},
+  journal={Explanatory Supplement to the AllWISE Data Release Products, by RM Cutri et al.},
+  year={2013}
+}
+
+@ARTICLE{bertin96sextractor,
+   author = {{Bertin}, E. and {Arnouts}, S.},
+    title = "{SExtractor: Software for source extraction.}",
+  journal = {\aaps},
+ keywords = {METHODS: DATA ANALYSIS, TECHNIQUES: IMAGE PROCESSING, GALAXIES: PHOTOMETRY},
+     year = 1996,
+    month = jun,
+   volume = 117,
+    pages = {393-404},
+      doi = {10.1051/aas:1996164},
+   adsurl = {http://adsabs.harvard.edu/abs/1996A%26AS..117..393B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{marshall15citizenscience,
+   author = {Marshall, Philip J. and Lintott, Chris J. and Fletcher, Leigh N.},
+   title = {Ideas for Citizen Science in Astronomy},
+   journal = {Annual Review of Astronomy and Astrophysics},
+   volume = {53},
+   pages = {247--278},
+   DOI = {10.1146/annurev-astro-081913-035959},
+   year = {2015},
+   type = {Journal Article}
+}
+
+@inproceedings{menon15cpe,
+ author = {Menon, Aditya Krishna and Van Rooyen, Brendan and Ong, Cheng Soon and Williamson, Robert C.},
+ title = {Learning from Corrupted Binary Labels via Class-probability Estimation},
+ booktitle = {Proceedings of the 32Nd International Conference on International Conference on Machine Learning - Volume 37},
+ series = {ICML'15},
+ year = {2015},
+ location = {Lille, France},
+ pages = {125--134},
+ numpages = {10},
+ url = {http://dl.acm.org/citation.cfm?id=3045118.3045133},
+ acmid = {3045133},
+ publisher = {JMLR.org},
+}
+
+@phdthesis{grant11polarised,
+  author={Grant, Julie K.},
+  title={Polarised Radio Sources: A Study of Luminosity, Redshift and Flux Density},
+  school={University of Calgary},
+  year=2011,
+  pages={96--98}
+}
+
+@ARTICLE{lukic18compact,
+   author = {{Lukic}, V. and {Br{\"u}ggen}, M. and {Banfield}, J.~K. and 
+  {Wong}, O.~I. and {Rudnick}, L. and {Norris}, R.~P. and {Simmons}, B.
+  },
+    title = "{Radio Galaxy Zoo: compact and extended radio source classification with deep learning}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1801.04861},
+ primaryClass = "astro-ph.IM",
+ keywords = {instrumentation: miscellaneous, methods: miscellaneous, techniques: miscellaneous, radio continuum: galaxies},
+     year = 2018,
+    month = may,
+   volume = 476,
+    pages = {246-260},
+      doi = {10.1093/mnras/sty163},
+   adsurl = {http://adsabs.harvard.edu/abs/2018MNRAS.476..246L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
