--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -42,11 +42,7 @@ I'll need to explain the purpose of this chapter and give a brief outline. There
 \section{Radio emission}
 \label{sec:radio-astronomy}
 
-    \begin{itemize}
-        \item synchrotron
-        \item free-free
-        \item polarisation
-    \end{itemize}
+    Electromagnetic radiation in radio frequencies---about 10~MHz--1~THz \citep{condon_essential_2016}---is called \defn{radio emission}. This is a very broad range of frequencies and so radio astronomy covers a very broad range of astrophysical phenomena, from cosmological background radiation to neutron stars. The focus of this thesis is the exciting, dynamic, and so-called `violent universe' of radio galaxies. These galaxies are observed through their emission of synchrotron radiation and are studied through their observed physical structure, the intensity and spectroscopic properties of their radiation, and the polarisation and spectropolarimetric properties that are uniquely visible in radio. This section introduces synchrotron radiation and radio polarisation.
 
     \subsection{Synchrotron radiation}
     \label{sec:synchrotron}
@@ -64,18 +60,19 @@ I'll need to explain the purpose of this chapter and give a brief outline. There
         \begin{equation}
             \alpha = \frac{\Gamma - 1}{2}.
         \end{equation}
-        AGN cores tend to have spectral indices around -0.7 \citeneeded, while the spectral index of the lobes is higher \citeneeded.
+        The spectral index for astronomical objects tends to range from -2 to 2\citeneeded.
 
 
     \subsection{Polarisation}
     \label{sec:polarisation}
 
-        \todo{This section is kinda terrible! Rewrite to be in terms of two orthogonal waves (-> linear polarisation) and if these are out of phase we have circular polarisation. Introduce the Poincar\'e sphere or at least an ellipse?}
-        An electromagnetic wave travels at an angle. This angle and its behaviour is called the \defn{polarisation} of the wave. As this wave propagates along the line-of-sight toward an observer, the electric field oscillates in an ellipse across the plane. This ellipse can be characterised by the \defn{Stokes parameters}. Split the electric field $\vec E$ along the $x$--$y$ plane perpendicular to the line-of-sight $\hat z$ into two orthogonal components $E_x$ and $E_y$:
+        Electromagnetic radiation consists of waves of self-propagating, orthogonal electric and magnetic fields. The orthogonality of these two waves allows us to characterise the radiation just by the electric field. As a transverse wave, the electric field travels at an angle. This angle and its behaviour is called the \defn{polarisation} of the wave.
+
+        The polarisation can be characterised by decomposing the electric field into orthogonal components $E_x$ and $E_y$, letting $\hat z$ denote the axis of propagation:
         \begin{equation}
             \vec E = (\hat x E_x \exp(i \varphi_x) + \hat y E_y \exp(i \varphi_y)) \exp(i (\vec k \cdot \hat z - \omega t)).
         \end{equation}
-        $\vec k$ is the \defn{wave vector} which points in the direction of travel and has magnitude $2\pi/\lambda$ and $\omega = 2\pi\nu$ is the \defn{angular frequency}. $\varphi_x$ and $\varphi_y$ are the phase offsets of each component. The Stokes parameters are then \citep{condon_essential_2016}
+        In an astronomical context, $\hat z$ is the line-of-sight from the source of the radiation to the observer. $\vec k$ is the \defn{wave vector} which points in the direction of travel and has magnitude $2\pi/\lambda$ and $\omega = 2\pi\nu$ is the \defn{angular frequency}. $\varphi_x$ and $\varphi_y$ are the phase offsets of each component. As this wave propagates along the line-of-sight toward an observer, the electric field oscillates in an ellipse across the $x$--$y$ plane. When the two components are in phase, this ellipse is degenerate and the radiation is called \defn{linearly polarised}. When the two components are perfectly out of phase, the ellipse is a circle, and the radiation is called \defn{circularly polarised}. Of course, any ellipse in between these extremes is also possible. For this reason, we decompose the polarisation into linearly polarised components and a circularly polarised component, called \defn{Stokes parameters}. These are \citep{condon_essential_2016}:
         \begin{align}
             \label{eq:stokes-i}
             I &= \frac{1}{R_0} \mathbb E_t[E_x^2 + E_y^2],\\
@@ -86,12 +83,12 @@ I'll need to explain the purpose of this chapter and give a brief outline. There
             \label{eq:stokes-v}
             V &= \frac{1}{R_0} \mathbb E_t[2 E_x^2 E_y^2 \sin (\varphi_x - \varphi_y)].
         \end{align}
-        $I$ is the \defn{total intensity}. $Q$ and $U$ together describe the \defn{linear polarisation}, which is related to the angle of the ellipse described above, called the \defn{polarisation angle} $\chi$:
+        $I$ is the \defn{total intensity}. $Q$ and $U$ together describe the linear polarisation and together can be used to define the \defn{polarisation angle} $\chi$:
         \begin{equation}
             \label{eq:polarisation-angle}
             \tan (2 \chi) = \frac{U}{Q}.
         \end{equation}
-        $V$ is called the \defn{circular polarisation} and describes the eccentricity of this ellipse. For most extragalactic sources, the circular polarisation is zero \citeneeded because \todo{reasons}. The polarised intensity is
+        $V$ is the circular polarisation and describes the eccentricity of the ellipse. For most extragalactic sources, the circular polarisation is zero \citeneeded because \todo{reasons}. Incoherent radiation may be composed of radiation with many different polarisations, and these polarisations may fully or partially cancel out: this is called \defn{unpolarised} or \defn{partially-polarised} respectively. The total intensity of polarised radiation is called the \defn{polarised intensity} and is given by
         \begin{equation}
             \label{eq:polarised-intensity}
             P^2 = Q^2 + U^2 + V^2.
@@ -103,9 +100,32 @@ I'll need to explain the purpose of this chapter and give a brief outline. There
 
         The synchrotron radiation from AGN is polarised, though this polarisation is not always detectable \citeneeded \todo{forward reference to AGN?}. Additionally, the most common non-AGN cause for radio emission is star-formation, which does not have detectable polarisation. Polarisation is therefore an excellent way to confirm that a radio source is an AGN.
 
-        Polarisation can also be used to describe the magnetic structure of both AGN and intervening medium.
+        Polarisation can also be used to describe the magnetic structure of both AGN and intervening medium. As polarised light from distant galaxies makes its way to us, magnetised plasma along the way can cause the polarisation angle to rotate due to the Faraday effect. The amount of rotation is called the \defn{Faraday depth} $\phi$, and is related to the electron density $n_e$ and the line-of-sight magnetic field strength $\vec B \cdot \hat{z}$ of the intervening medium:
+        \begin{equation}
+            \label{eq:faraday-depth}
+            \phi(x, y) = \frac{e^3}{8\pi^2\epsilon_0m_e^2c^3} \int_{\mathrm{there}}^{\mathrm{here}} n_e(x, y, z) \vec B(x, y, z) \cdot \mathrm{d}\hat{z}\ \mathrm{rad}\ \mathrm{m}^{-2}.
+        \end{equation}
+        Here $\mathrm{d}\vec r$ is the infinitesimal path length in pc \citep{brentjens_faraday_2005} \todo{Check the units on this, and maybe get the actual form for 0.81.}. Within the synthesised beam of a radio telescope\todo{forward reference to beams}, multiple Faraday depths may exist. If the polarised spectrum of the source is observed at multiple frequencies, then these multiple depths can be disentangled even though they spatially overlap in the radio image. This can provide insight into the polarised structure of the source as well as the intervening medium. The leading constant is around $2.62 \times 10^{-13}$~T$^{-1}$, more commonly written as 0.812 pc $\upmu$G$^{-1}$ cm$^{-1}$ in CGS units with $B$ in $\upmu$G and $z$ in pc.
 
-        \todo{Need a bit on Faraday screens, Faraday complexity.}
+        If the entire beam has precisely one Faraday depth $\phi$, then the polarised structure is called a \defn{Faraday screen}. In this degenerate case, the relationship between the polarisation angle $\chi$ and the squared wavelength $\lambda^2$ is linear:
+        \begin{equation}
+            \chi = \chi_0 + \phi \lambda^2.
+        \end{equation}
+        $\phi$ is then called the \defn{rotation measure}. Until very recently, the frequency resolution of polarised surveys was insufficient to meaningfully separate most complex arrangements of Faraday depths, and so most sources were characterised entirely in terms of their rotation measure \citep[e.g.][]{taylor_rotation_2009}. Advancing telescope technology and emphasis on polarisation science has opened new frontiers in spectropolarimetry and upcoming and ongoing surveys (e.g. RACS and POSSUM) will likely produce Faraday depth catalogues instead of rotation measures. Of course, no physical source has a precise Faraday depth, as there is always intrinsic scatter. Along the line of sight, if we assume Gaussian noise in an otherwise-constant $n_e$ i.e. $n_e(z) \sim \mathcal N(\overline n_e, \sigma_{n_e}^2)$, and a constant $B$ for simplicity, then we find
+        \begin{equation}
+            \phi \sim \mathcal N\left(\frac{e^3}{8\pi^2\epsilon_0m_e^2c^3} B \overline n_e, \frac{e^3}{8\pi^2\epsilon_0m_e^2c^3} B \sigma_{n_e}^2\right),
+        \end{equation}
+        that is, the depth has an uncertainty proportional to the magnetic field strength and the noise in $n_e$. A similar result follows for noise in $B$ only. There is no analytic solution for noise in both $B$ and $n_e$, but if we approximate the integrand as a Gaussian by calculating the mean and variance we find
+        \begin{equation}
+            \phi \sim \mathcal N\left(\frac{e^3}{8\pi^2\epsilon_0m_e^2c^3} \frac{\overline n_e \sigma_B^2 + \overline B \sigma_{n_e}^2}{\sigma_B^2 + \sigma_{n_e}^2}, \frac{e^3}{8\pi^2\epsilon_0m_e^2c^3} \frac{\sigma_{n_e}^2 \sigma_B^2}{\sigma_{n_e}^2 + \sigma_B^2}\right).
+        \end{equation}
+        We observe multiple lines-of-sight that are coalesced into one within the beam. Due to this noise, even with constant $n_e$ and $B$ across a source, we can see multiple Faraday depths as each line-of-sight is a sample from the above distribution.
+
+        %     \label{eq:faraday-depth-intrinsic-dispersion-simple}
+        %     \phi(x, y) \sim \mathcal N\left(10^{-16} \times 0.81 \frac{D}{1\ \mathrm{pc}} \overline n_e \overline B_{\perp}, 10^{-16} \times 0.81 \frac{D}{1\ \mathrm{pc}} \sigma_{n_e}\right).
+        % \end{equation}
+
+        \todo{Need a bit on Faraday screens, Faraday complexity?}
 
 \section{Active Galactic Nuclei}
 \label{sec:agn}
@@ -155,7 +175,7 @@ I'll need to explain the purpose of this chapter and give a brief outline. There
             \caption[Examples of a FRI and a FRII radio galaxy.]{\label{fig:fri-frii} Examples of (a) a FRI \citep{laing_rotation_1987} and (b) a FRII radio galaxy \citep{leahy_vla_1991}. Both are shown with an arcsinh stretch and were observed with the VLA.}
         \end{figure}
 
-        At their core, AGN are an accreting \defn{supermassive black hole}: a body so dense that even light cannot escape its gravitational pull, with mass on the order of $10^7$--$10^9\ \mathrm{M}_\odot$ \citeneeded{}. Such black holes seem to exist at the centre of galaxies\citeneeded{} and these galaxies are called \defn{host galaxies}. The current understanding of the structure of an AGN is as follows \citep{urry_unified_1995}. The black hole is surrounded by an accretion disc emitting in ultraviolet and X-ray. Beyond this is the broad-line region, named for the broad emission lines emitted by clouds of material surrounding the accretion disc. The broad-line region and accretion disc are themselves surrounded by a dusty torus (or some other disc-like structure) which prevents light from the centre of the AGN being observed from the sides. Further still from the accretion disc is the narrow-line region, where lower-energy gas produces narrow emission lines. From either side of the disc, an AGN produces two collimated outflows of relativistic plasma called {jets}, and these jets interact with gas in the host galaxy to produce bright radio emission. As the jets disperse further out from the centre of the AGN they widen into plumes of plasma known as \defn{lobes}. This model of AGN unifies different observed classes of AGN by their orientation and luminosity, and is hence known as the \defn{unified model} \citep{antonucci_unified_1993}.
+        At their core, AGN are an accreting \defn{supermassive black hole}: a body so dense that even light cannot escape its gravitational pull, with mass on the order of $10^7$--$10^9\ \mathrm{M}_\odot$ \citeneeded{}. Such black holes seem to exist at the centre of galaxies\citeneeded{} and these galaxies are called \defn{host galaxies}. The current understanding of the structure of an AGN is as follows \citep{urry_unified_1995}. The black hole is surrounded by an accretion disc emitting in ultraviolet and X-ray. Beyond this is the broad-line region, named for the Doppler-broadened emission lines emitted by the energetic clouds of material surrounding the accretion disc. The broad-line region and accretion disc are themselves surrounded by a dusty torus (or some other disc-like structure) which prevents light from the centre of the AGN being observed from the sides. Further still from the accretion disc is the narrow-line region, where lower-energy gas produces narrow emission lines. From either side of the disc, an AGN produces two collimated outflows of relativistic plasma called {jets}, and these jets interact with gas in the host galaxy to produce bright radio emission. As the jets disperse further out from the centre of the AGN they widen into plumes of plasma known as \defn{lobes}. This model of AGN unifies different observed classes of AGN by their orientation and luminosity, and is hence known as the \defn{unified model} \citep{antonucci_unified_1993}.
 
         There are many different ways to divide the set of radio AGN into classes. By morphology, radio AGN are often divided by the structure of the jets and lobes: Fanaroff-Riley type I (FRI) and Fanaroff-Riley type II (FRII) are the most striking examples, with FRI having wavy, diffuse lobes; and FRII having long, tightly-collimated jets and sharp-edged lobes with bright hot-spots \citep{urry_unified_1995}. FRII are also generally higher-luminosity \citep{fanaroff_morphology_1974} than FRI and therefore make up the majority of observed extended radio sources throughout the Universe. AGN can also be divided into \defn{radiative-mode} and \defn{jet-mode} by how they expel their energy \citep{heckman_coevolution_2014}. Radiative-mode AGN produce radiative energy in amounts higher than 1 percent of their Eddington limit, while jet-mode AGN mainly output energy through their jets. The Eddington limit describes the maximum luminosity that a compact object can emit, and is given in \autoref{eq:eddington} \citep{rybicki_radiative_1979}:
         \begin{equation}
@@ -193,22 +213,27 @@ I'll need to explain the purpose of this chapter and give a brief outline. There
         The strong interaction of AGN with their environment leads to a great variety of exotic-shaped radio galaxies. Some morphological classes of this `radio galaxy zoo' include X-shaped galaxies, which have two sets of lobes roughly perpendicular to each other; wide- and narrow-angled tail galaxies, which are bent about the core with large and small angles respectively; head-tail galaxies, which are so bent that the two lobes seem to be the same or nearly the same; double-doubles, which have two sets of lobes on each side; and many, many more. Some examples of radio galaxies with interesting structure are shown in \autoref{fig:interesting}. Large-scale automated identification of these galaxies can be tricky owing to their variety, extent, and often disconnected structure.
 
         \todo{How does the spectral index vary over the jets and lobes? How much power do AGN inject into their environment?}
+        AGN cores tend to have flat or inverted spectral indices around -0.5--1 \citeneeded, while the spectral index of the lobes is steeper at about -0.7 \citeneeded. The hotspots of FRII galaxies have spectral indices between -0.5 -- -0.7. The jets do not strongly emit and are only detectable for particularly deep observations or nearby radio galaxies \citeneeded.
 
     \subsection{Polarised structure}
     \label{sec:polarised-structure-of-agn}
 
+        This section is where I will talk about how polarisation varies over the extended structure of a radio galaxy! Heavy reference to Julie's thesis here.
+
     \subsection{The host galaxies of AGN}
     \label{sec:host-galaxies}
+
+        This section will discuss the host galaxies of AGN, with necessary reference to their infrared colours as probes of the physics within. How do AGN interact with their host galaxies and vice-versa?
 
     \subsection{AGN throughout the universe}
     \label{sec:agn-throughout-the-universe}
 
-        \todo{What is the expected distribution of AGN? What do simulations say, and what do observations say? Note that AGN get brighter back in time.}
+        What is the expected distribution of AGN? What do simulations say, and what do observations say? Note that AGN get brighter back in time.
 
     \subsection{The role of AGN}
     \label{sec:role-of-agn}
 
-        \todo{How do AGN tie into galaxy evolution and feedback? Why do we need them in our models and theories? Why are they important?}
+        How do AGN tie into galaxy evolution and feedback? Why do we need them in our models and theories? Why are they important?
 
 
         % The most general form of the electric field in an electromagnetic wave, propagating in the $\hat z$ direction, is
